Server/esp_server/build/log/idf_py_stderr_output_34502
Command: make -j 10 all
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:52:13: warning: 'wifi_init_sta' defined but not used [-Wunused-function]
   52 | static void wifi_init_sta() {
      |             ^~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   43 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   42 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'serverTask':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:322:55: error: '%s' directive output may be truncated writing up to 255 bytes into a region of size 248 [-Werror=format-truncation=]
  322 |         snprintf(filepath, sizeof(filepath), "/sdcard/%s", filename); // Assuming files are stored in /sdcard/
      |                                                       ^~   ~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:322:9: note: 'snprintf' output between 9 and 264 bytes into a destination of size 256
  322 |         snprintf(filepath, sizeof(filepath), "/sdcard/%s", filename); // Assuming files are stored in /sdcard/
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:10:
In function 'accept',
    inlined from 'serverTask' at /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:298:29:
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/include/lwip/sockets.h:38:10: error: 'client_socket' may be used uninitialized [-Werror=maybe-uninitialized]
   38 | { return lwip_accept(s,addr,addrlen); }
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'serverTask':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:298:13: note: 'client_socket' was declared here
  298 |         int client_socket = accept(client_socket, (struct sockaddr *)&client_addr, &client_addr_len);
      |             ^~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
